<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_weather_information"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iconView"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_wind_speed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Направление ветра: "-->
        <!--            android:textSize="20sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/wind_direction"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:inputType="text" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_pressure"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_precipitation_per_hour"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/precipitation_amount_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_humidity"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/humidity_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cloud_cover"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/cloud_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_real_feel_c"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/feeling_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_real_feel_f"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/feeling_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_visibility"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/visibility_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_wind_gust"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/gust_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>

    <!--    val tempC: Float,-->
    <!--    val tempF: Float,-->
    <!--    val isDay: Int,-->
    <!--    val textDescription: String,-->
    <!--    val icon: String,-->
    <!--    val windSpeed: Float,-->
    <!--    val windDegree: Float,-->
    <!--    val windDirection: String,-->
    <!--    val pressure: Float,-->
    <!--    val precipitationAmountHour: Float,-->
    <!--    val humidityPercent: Float,-->
    <!--    val cloudPercent: Float,-->
    <!--    val feelingC: Float,-->
    <!--    val feelingF: Float,-->
    <!--    val visibilityKm: Float,-->
    <!--    val gustWindSpeed: Float-->