<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/expl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_choose_option"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#596BCF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/delimeter_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintHeight_percent="0.01"
        app:layout_constraintTop_toBottomOf="@id/expl" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/citiesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delimeter_view">
        <TextView
            android:id="@+id/addedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_added_cities"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#233BC1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/addedCitiesImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/cities"
            app:layout_constraintStart_toEndOf="@id/addedText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RadioButton
            android:id="@+id/citiesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/delimeter_view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintTop_toBottomOf="@id/citiesLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delimeter_view2">
        <TextView
            android:id="@+id/mapsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_location_weather"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#233BC1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/mapsImage"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/maps"
            app:layout_constraintStart_toEndOf="@id/mapsText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RadioButton
            android:id="@+id/mapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>