<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.current_weather.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--            android:id="@+id/bottom_navigation_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="0dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:menu="@menu/bottom_navigation_menu" />-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent">-->
<!--        <ImageButton-->
<!--            android:id="@+id/homeButton"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:background="@drawable/home"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/mapsButton"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:background="@drawable/maps"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <ImageButton
            android:id="@+id/citiesWeatherButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/citiesWeatherButton"
            app:layout_constraintStart_toEndOf="@+id/addButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tempCView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityView" />

        <TextView
            android:id="@+id/gradC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_c"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@id/tempCView"
            app:layout_constraintTop_toBottomOf="@+id/cityView" />

        <TextView
            android:id="@+id/tempFView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempCView" />

        <TextView
            android:id="@+id/gradF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_f"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tempFView"
            app:layout_constraintTop_toBottomOf="@+id/tempCView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/threeDayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_constraint"
            app:layout_constraintTop_toBottomOf="@id/tempFView">

            <LinearLayout
                android:id="@+id/threeDayLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_constraint"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekForecastButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:text="@string/fourteen_day_forecast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/threeDayLinearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/delimeter_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintHeight_percent="0.02"
            app:layout_constraintTop_toBottomOf="@id/threeDayLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/windLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_constraint"
            app:layout_constraintEnd_toStartOf="@id/moreWeatherInfoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delimeter_view"
            app:layout_constraintBottom_toTopOf="@id/delimeter_view2"
            app:layout_constraintWidth_percent="0.45">

            <TextView
                android:id="@+id/windDirView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/windSpeedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windDirView" />

            <com.example.weatherapp.ui.custom_view.CompasView
                android:id="@+id/compasView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/windSpeedView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moreWeatherInfoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/windLayout"
            app:layout_constraintTop_toBottomOf="@id/delimeter_view"
            app:layout_constraintWidth_percent="0.5">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moreInfoRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/delimeter_view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintHeight_percent="0.02"
            app:layout_constraintTop_toBottomOf="@id/moreWeatherInfoLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/barChartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_constraint"
            app:layout_constraintTop_toBottomOf="@id/delimeter_view2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecastRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="gradC, gradF, threeDayLayout, windLayout, delimeter_view, delimeter_view2, citiesWeatherButton, addButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>